...
        context: context,
        builder: (ctx) => AlertDialog(
          title: Text('Credit Card Error'),
          content: Text(res.getMessage()),
          actions: <Widget>[
            FlatButton(
              key: const Key("ok_error"),
              child: Text('Ok'),
              onPressed: () {
                Navigator.of(ctx).pop();
              },
            ),
          ],
...
                                      onCreditCardModelChange,
                                ),
                                const SizedBox(
                                  height: 20,
                                ),
                                ElevatedButton(
                                  key: const Key("save"),
                                  style: ElevatedButton.styleFrom(
                                      shape: RoundedRectangleBorder(
                                        borderRadius:
                                            BorderRadius.circular(8.0),
                                      ),
                                      primary: Theme.of(context).primaryColor),
...
